add graphic component

--- a/src/app/dolar/dolar.component.html
+++ b/src/app/dolar/dolar.component.html
@@ -1,7 +1,7 @@
 <div class="main">
     <!-- <p id="coin">Moeda escolhida</p><p id="value">Valor convertido</p> -->
     <p class="style">Converter Dólar em Real</p>
-    <input type="text" placeholder="Dólar"  value = "{{resultado | currency:'BRL'}}"n (keyup) = "getDolar($event)" id="dolar" autofocus>
+    <input type="text" placeholder="R$1.00"  value = "{{resultado | currency:'BRL'}}"n (keyup) = "getDolar($event)" id="dolar" autofocus>
     <span class="btn-trade">From</span>
-    <input type="text" placeholder="Real" (keyup) = "getReal($event)" value="{{ress | currency:'USD'}}" id="real">
+    <input type="text" placeholder="{{dolar | currency:'USD'}}" (keyup) = "getReal($event)" value="{{ress | currency:'USD'}}" id="real">
 </div>
