--- a/src/app/index/index.component.html
+++ b/src/app/index/index.component.html
@@ -8,6 +8,27 @@
     </ul>
 </nav>
 
+<p class="fst">{{dolar | currency:'USD'}}</p>
+<p class="scn">{{dolarA | currency:'AUD'}}</p>
+<p class="thr">{{dolarC | currency:'CAD'}}</p>
+<p class="fht">{{dolarE | currency:'EUR'}}</p>
+<p class="fft">{{dolarL | currency:'GBP'}}</p>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 <!-- <mat-sidenav-container
     class="example-container" (backdropClick)="close('backdrop')" *ngIf="shouldRun">
   <mat-sidenav #sidenav (keydown.escape)="close('escape')" disableClose>
