--- a/src/app/euro/euro.component.html
+++ b/src/app/euro/euro.component.html
@@ -1,8 +1,8 @@
 <div class="main">
     <!-- <p id="coin">Moeda escolhida</p><p id="value">Valor convertido</p> -->
     <p class="style">Converter Euro em Real</p>
-    <input type="text" placeholder="Euro" value="{{resultado | currency:'BRL'}}" (keyup) = "getEuro($event)" id="dolar" autofocus>
+    <input type="text" placeholder="R$1.00" value="{{resultado | currency:'BRL'}}" (keyup) = "getEuro($event)" id="dolar" autofocus>
     <span class="btn-trade">From</span>
-    <input type="text" placeholder="Real" (keyup) = "getReal($event)" value="{{ress | currency:'EUR'}}" id="real">
+    <input type="text" placeholder="{{dolar | currency:'EUR'}}" (keyup) = "getReal($event)" value="{{ress | currency:'EUR'}}" id="real">
 </div>
 
