--- a/src/app/index/index.component.css
+++ b/src/app/index/index.component.css
@@ -14,6 +14,36 @@
     margin-right: 30px;
 }
 
+p {
+    color: rgb(253, 253, 253);
+    display: inline-block;
+    padding: 5px;
+    background-color: rgb(0, 0, 0);
+    border: 3px solid rgb(255, 255, 255);
+    border-radius: 30px;
+}
+
+
+.fst{
+    margin-left: 25px;
+}
+
+.scn{
+    margin-left: 80px;
+}
+
+.thr{
+    margin-left: 65px;
+}
+
+.fht{
+    margin-left: 75px;
+}
+
+.fft{
+    margin-left: 80px;
+}
+
 .dolar{
     background-image: url("../../assets/imagens/eua.png");
     background-size: 100%;
