--- a/src/app/libra/libra.component.html
+++ b/src/app/libra/libra.component.html
@@ -1,7 +1,7 @@
 <div class="main">
     <!-- <p id="coin">Moeda escolhida</p><p id="value">Valor convertido</p> -->
     <p class="style">Converter Libra em Real</p>
-    <input type="text" placeholder="Libra" value = "{{resultado | currency:'BRL'}}" (keyup) = "getLibra($event)" id="dolar" autofocus>
+    <input type="text" placeholder="R$1.00" value = "{{resultado | currency:'BRL'}}" (keyup) = "getLibra($event)" id="dolar" autofocus>
     <span class="btn-trade">From</span>
-    <input type="text" placeholder="Real" value="{{ress | currency:'GBP'}}" (keyup) = "getReal($event)" id="real">
+    <input type="text" placeholder="{{dolar | currency:'GBP'}}" value="{{ress | currency:'GBP'}}" (keyup) = "getReal($event)" id="real">
 </div>
