--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -318,7 +318,7 @@
 
   <app-index></app-index>
   <router-outlet></router-outlet>
-  <!-- <app-graphic></app-graphic> -->
+  <app-graphic></app-graphic>
  
   
   
