--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -318,13 +318,14 @@
 
   <app-index></app-index>
   <router-outlet></router-outlet>
-  <!-- <app-graphic></app-graphic> -->
- 
+  <app-graphic></app-graphic>
+
   
   
   
 </div>
 
+ 
 <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
 <!-- * * * * * * * * * * * The content above * * * * * * * * * * * -->
 <!-- * * * * * * * * * * is only a placeholder * * * * * * * * * * -->
