--- a/src/styles.css
+++ b/src/styles.css
@@ -11,3 +11,6 @@ body {
 
 /* https://i.pinimg.com/originals/04/3f/b8/043fb88da06773661479424d79ce6948.jpg */
 
+
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
